# IR2025

./: .gitignore  README.md  actor_id_to_type.yaml  experiment_parameters.yaml  pyproject.toml  test_coord_tranform.ipynb  translate_entire_data_folders.sh
demo/: create_car_video.py  extract_data.py  record_imu_example.md  vehicle_ctrl.py
docs/: structure_h5.md
examples/demo/: create_plot_video.py  ego_vehicle.json
examples/lidar/: ego_vehicle_lidar.json  extract_lidar_data.py  plot_pointcloud_frame.py  readme.md  vehicle_ctrl.py
kasselMap/: kassel.osm.pbf  load_kassel_xodr.py  readme.md
scen/: README.md  config.py  data.py  experiment.py  visualization.py
scen/util/: coords.py
scenarios/: FollowLeadingVehicle.xosc
vehicles/: README.md  argoversev2_vehicle.json  dummy.json  eight_car_lidar.json  eight_lidar_car.json  ies_vehicle.json  nuscenes_vehicle.json  waymo_open_vehicle.json
